# Boyzin

./: Boyzin.cabal  README.md  cabal.project.local
lib/: CPU.hs  Cpu.hs  CpuUtils.hs  Decoder.hs  Executor.hs  Instructions.hs  Types.hs
lib/CPU/: Decoder.hs  Executor.hs  Instructions.hs  Interface.hs  Pure.hs
test/: InstructionsSpec.hs  ProcessorState.hs  Spec.hs  TestTools.hs
