cabal-version: 3.14
name: Boyzin
version: 0.1.0.0
build-type: Simple


common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    CPU.Executor
    CPU
    CPU.Interface
    CPU.Pure
    CPU.Instructions
    Types
    CPU.Decoder
  build-depends:
    base ^>=4.21.0.0,
    microlens,
    microlens-th,
    vector,
  hs-source-dirs: lib
  default-language: GHC2024

executable Boyzin
  import: warnings
  main-is: Main.hs
  build-depends:
    Boyzin,
    base ^>=4.21.0.0,
  hs-source-dirs: app
  default-language: GHC2024

test-suite BoyzinTest
  default-extensions:
    DeriveGeneric,
    OverloadedStrings,
    DeriveAnyClass

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    InstructionsSpec,
    TestTools
  build-depends:
    base ^>=4.21.0.0,
    Boyzin,
    hspec,
    QuickCheck,
    bytestring,
    aeson,
    text,

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2024
